lintian (2.5.30) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * collection/unpacked:
    + [NT] Correct handling of files with 2 or more consecutive
      backslashes.

  * helpers/coll/strings-helper:
    + [NT] Filter out duplicate strings.  This applies to the
      majority of all ELF binaries (except ones with very exotic
      file names with glyphs like ":").

  * t:
    + [NT] Apply patch from Johannes Schauer to fix FTBFS with
      newer dpkg that have stricter checking of build-profiles.

  * lib/Lintian/Internal/FrontendUtil.pm:
    + [AB] Don't clean HOME and some XDG_* variables when sanitizing the
      environment. (Closes: #766737)

  * debian/control:
    + [AB] Add a Homepage header pointing to https://lintian.debian.org/

  * debian/copyright:
    + [AB] Add myself to debian/copyright.

 -- Niels Thykier <niels@thykier.net>  Sat, 25 Oct 2014 13:20:50 +0200

lintian (2.5.29) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - dbus-policy-at-console
      - dbus-policy-without-send-destination
      - dbus-session-service-wrong-name
      - dbus-system-service-wrong-name
      - invalid-profile-name-in-build-profiles-field
      - invalid-profile-name-in-source-relation
      - invalid-restriction-formula-in-build-profiles-field
      - restriction-formula-with-debhelper-with-conflicting-version
      - restriction-formula-with-debhelper-without-debhelper-version
      - restriction-formula-with-versioned-dpkg-dev-conflict
      - restriction-formula-without-versioned-dpkg-dev-dependency
    + Removed:
      - invalid-restriction-label-in-source-relation
      - invalid-restriction-namespace-in-source-relation
      - invalid-restriction-term-in-source-relation
      - restriction-list-with-debhelper-with-conflicting-debhelper-version
      - restriction-list-with-debhelper-without-debhelper-version
      - restriction-list-with-versioned-dpkg-dev-conflict